Add Skills Values

--- a/views/skills/index.ejs
+++ b/views/skills/index.ejs
@@ -4,16 +4,18 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="/stylesheets/style.css">
   <title><%= title %></title>
 </head>
 <body>
   <body>
-    <h1>Skills</h1>
+  <div class="main">
+  <div class="header"><h1>Skills</h1></div> 
     <% if(error) { %>
       <h2><%= error %></h2>
     <% } %>
     <ul>
-      <% skills.forEach(todo => { %>
+      <% skills.forEach(skill => { %>
         <li>
           <a href="/skills/<%= skill._id %>"><%= skill.text %></a>
           -
@@ -21,6 +23,7 @@
         </li>
       <% }) %>
     </ul>
+  </div>
   </body>
 </body>
 </html>
