--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -6,3 +6,28 @@ body {
 a {
   color: #00B7FF;
 }
+
+.main{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+
+}
+
+.header{
+  text-align: center;
+  margin: 0 auto;
+  
+}
+
+li {
+  list-style: none;
+  border: 1px solid black;
+  padding: 10px;
+  margin: 5px;
+  box-shadow: 1px 1px #888888;
+}
+li:hover {
+  transform: scale(1.1);
+}
