--- a/views/skills/index.ejs
+++ b/views/skills/index.ejs
@@ -10,7 +10,7 @@
 <body>
   <body>
   <div class="main">
-  <div class="header"><h1>Skills</h1></div> 
+  <div class="header"><h1>Skills <%= time %> </h1></div> 
     <% if(error) { %>
       <h2><%= error %></h2>
     <% } %>
@@ -24,6 +24,7 @@
       <% }) %>
     </ul>
   </div>
+  <a href="/todos/new">Add a Skill</a>
   </body>
 </body>
 </html>
