Debug todos new

--- a/views/skills/index.ejs
+++ b/views/skills/index.ejs
@@ -24,7 +24,7 @@
       <% }) %>
     </ul>
   </div>
-  <a href="/todos/new">Add a Skill</a>
+  <a href="/skills/new">Add a Skill</a>
   </body>
 </body>
 </html>
