--- a/views/skills/new.ejs
+++ b/views/skills/new.ejs
@@ -8,7 +8,7 @@
   <title>Document</title>
 </head>
 <body>
-  h1>New To-Do</h1>
+  <h1>New To-Do</h1>
   <form action="/skills" method="POST" autocomplete="off">
     <input type="text" name="text">
     <button type="submit">Save Skill</button>
